==================== 2.26.0 ======================

2009-03-16  Callum McKenzie  <callum@spooky-possum.org>

	* null_applet.c (insert_oafiids): Check for
	OAFIID:GNOME_MixerApplet too. Bug 575105.

==================== 2.25.92 ======================

==================== 2.25.91 ======================

==================== 2.25.90 ======================

2009-01-27  Callum McKenzie  <callum@spooky-possum.org>

	* Makefile.am: Use the null applet for the mixer if it isn't
	explicitly built.

==================== 2.25.3 ======================

2009-01-06  Callum McKenzie  <callum@spooky-possum.org>

	* GNOME_MixerApplet.server.in
	* null_applet.c
	* Makefile.am: Redirect the mixer applet to here since it has
	been removed.

==================== 2.25.2 ======================

==================== 2.24.0.1 ====================

2008-01-08  Kjartan Maraas  <kmaraas@gnome.org>

	* null_applet.c: (get_all_applets):
	Fix error on startup of null_applet. Patch
	from Ray Strode. Closes bug #395035.

2005-02-24  Kjartan Maraas  <kmaraas@gnome.org>

	* null_applet.c: (applet_factory):  Don't mix code and decl.

2005-01-07  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Don't remove $(server_in_files) on make clean.
	Just remove GNOME_NullApplet_Factory.server.in exlicitly so
	that make clean; make works.

2005-01-06  Mark McLoughlin  <mark@skynet.ie>

	* GNOME_NullApplet_Factory.server.in.in: remove mailcheck
	and cdplayer servers and ...
	
	* GNOME_CDPlayerApplet.server.in,
	  GNOME_MailcheckApplet_Factory.server.in: move them to here
	so we're sure that the old .server files aren't left lying
	around.
	
	* GNOME_Panel_WirelessApplet.server.in: point the wireless
	applet OAFIID at gnome-netstatus.
	
	* Makefile.am: upd.
	
	* README: blurb.

2004-10-26  Davyd Madeley  <davyd@madeley.id.au>

	* README:
	* GNOME_NullApplet_Factory.server.in.in:
	* Makefile.am:
	* null_applet.c: Initial version: specifically for deprecating the
	  mailcheck applet.