@@ -1,3 +1,9 @@
+2009-03-20  Callum McKenzie  <callum@spooky-possum.org>
+
+	* null_applet.c (get_all_applets): Mark the applet names as
+	translatable (bug 575107). Remove some unnecessary (debugging)
+	warning messages. Fix a warning message.
+
 ==================== 2.26.0 ======================
 
 2009-03-16  Callum McKenzie  <callum@spooky-possum.org>
